--- a/prompt.html
+++ b/prompt.html
@@ -58,6 +58,7 @@
       <input id="output" type="text" /><br /><br /><br />
       <h1>Counter</h1>
       <span id="counter">0</span>
+      <p>Hello </p>
       <div class="btn-container">
         <button class="btn increase">+</button>
         <button class="btn reset">Reset</button>
