--- a/prompt.html
+++ b/prompt.html
@@ -58,7 +58,7 @@
       <input id="output" type="text" /><br /><br /><br />
       <h1>Counter</h1>
       <span id="counter">0</span>
-      <p>Hello world my name is niraj patil</p>
+      <p>Hello world my name is niraj patil I am 25 year old</p>
       <div class="btn-container">
         <button class="btn increase">+</button>
         <button class="btn reset">Reset</button>
